Alignment issue with buttons and text on side panel in analysis result page.

--- a/dcc-portal-ui/app/styles/_modules/_list.scss
+++ b/dcc-portal-ui/app/styles/_modules/_list.scss
@@ -32,6 +32,10 @@
   }
 }
 
+.select-list-no-item{
+  margin: 12px;
+}
+
 .select-list-item {
   cursor: pointer;
   padding: 0.5rem;
